HS-2843 fixed email icon wrapping on responsive

--- a/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
+++ b/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
@@ -558,6 +558,8 @@
         text-align: right
 
         span
+          white-space: nowrap
+
           &:last-of-type
             strong
               margin-right: 0
